--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
     </main>
             
         <footer>
-            <ul id="footer_nav">
+            <ul class="footer_nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="contacts.html">Contacts</a></li>
@@ -65,7 +65,7 @@
             </ul>
             2016 &copy; Created by Kushnir Petro
         <table>
-        <tr>
+        <tr class="social">
             <td>
                 <a href="https://www.facebook.com/profile.php?id=100002324631031"><img src="pictures/facebook.png" alt="facebook" height="40" width="40"/></a>
             </td>
