--- a/contacts.html
+++ b/contacts.html
@@ -63,19 +63,20 @@
                 <li><a href="about.html">About</a></li>
             </ul>
             2016 &copy; Created by Kushnir Petro
-        <table>
-        <tr class="social">
-            <td>
-                <a href="https://www.facebook.com/profile.php?id=100002324631031"><img src="pictures/facebook.png" alt="facebook" height="40" width="40"/></a>
-            </td>
-            <td>
-                <a href="http://vk.com/id13896999"><img src="pictures/vkontakte.png" alt="vk" height="40" width="40"/></a>
-            </td>
-            <td>
-                <a href="https://uk.wikipedia.org/wiki/%D0%A2%D0%B2%D1%96%D1%82%D1%82%D0%B5%D1%80"><img src="pictures/twitter.png" alt="twitter" height="40" width="40" /></a>
-            </td>
-        </tr>
-        </table>
+        <ul class="social">
+            <li>
+                <a href="https://www.facebook.com/profile.php?id=100002324631031"><img src="img/facebook.png" alt="facebook" height="40" width="40"/></a>
+            </li>
+            <li>
+                <a href="http://vk.com/id13896999"><img src="img/vk.png" alt="vk" height="40" width="40"/></a>
+            </li>
+            <li>
+                <a href="https://uk.wikipedia.org/wiki/%D0%A2%D0%B2%D1%96%D1%82%D1%82%D0%B5%D1%80"><img src="img/twitter.png" alt="twitter" height="40" width="40" /></a>
+            </li>
+            <li>
+                <a href="https://plus.google.com/u/1/110101179381222254453/posts"><img src="img/google.png" alt="google" height="40" width="40"/></a>
+            </li>
+        </ul>
         </footer>
 </body>
 </html>
