--- a/skills.html
+++ b/skills.html
@@ -85,7 +85,7 @@
                 <li><a href="contacts.html">Contacts</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
-            2016 &copy; Created by Kushnir Petro
+            <div class="created">2016 &copy; Created by Kushnir Petro</div>
         <div class="social">
             
                 <a href="https://www.facebook.com/profile.php?id=100002324631031"><img src="img/facebook.png" alt="facebook" height="40" width="40"/></a>
