--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,7 @@
     <title>Kushnir Petro</title>
      <link rel="stylesheet" href="styles/stylesheet.css" />
      <link rel="stylesheet" href="styles/skills.css" />
+     <link href='https://fonts.googleapis.com/css?family=Oxygen:700,400,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <header>
@@ -31,7 +32,7 @@
             <div class="universitet">
                 <h1>Sevastopol National University of Nuclear Energy and Industry, Sevastopol, Ukraine</h1>
                  <p>Nanotechnologies and Information Measuring and Specialized Computer System</p>
-                <p><br> September 2009 — June 2014</p>
+                <p> September 2009 — June 2014</p>
                 <ul>
                     <li >Master Degree</li>
                 </ul>
