--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,8 @@
     <title>Kushnir Petro</title>
     <link rel="stylesheet" href="styles/stylesheet.css" />
     <link rel="stylesheet" href="styles/contacts.css" />
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:700,400,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Jura' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <header>
@@ -22,10 +24,9 @@
     <main>
         <div class="home">
             <img src="img/contacts.png"/>
-            <h1>Contact with me!</h1>
         </div>
+        <h1>Contact with me!</h1>
         <section class="main_info">
-            <h2>Couple words about me</h2>
             <div class="main_part">
             <div class="contact_info">
                 <h2>Contact Information</h2>
@@ -33,8 +34,6 @@
                 <p>kallebloomckwist@gmail.com</p>
                 <p>0664528216</p>
                 <p>Lviv, Vyhovskoho 23 str.</p>
-
-
             </div>
             <div class="submit_form">
                 <form id="contactForm" method="post">
@@ -65,7 +64,7 @@
             </ul>
             <div class="created">2016 &copy; Created by Kushnir Petro</div>
        <div class="social">
-                <a href="https://www.facebook.com/profile.php?id=100002324631031"><img src="img/facebook.png" alt="facebook" height="40" width="40"/></a>
+                <a href="https://www.facebook.com/pwrofile.php?id=100002324631031"><img src="img/facebook.png" alt="facebook" height="40" width="40"/></a>
                 <a href="http://vk.com/id13896999"><img src="img/vk.png" alt="vk" height="40" width="40"/></a>
                 <a href="https://uk.wikipedia.org/wiki/%D0%A2%D0%B2%D1%96%D1%82%D1%82%D0%B5%D1%80"><img src="img/twitter.png" alt="twitter" height="40" width="40" /></a>
                 <a href="https://plus.google.com/u/1/110101179381222254453/posts"><img src="img/google.png" alt="google" height="40" width="40"/></a>
