--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Kushnir Petro</title>
     <link rel="stylesheet" href="styles/stylesheet.css" />
+    <link rel="stylesheet" href="styles/about.css" />
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:700,400,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <header>
