--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,7 @@
             <div class="main_part">
             <div class="contact_info">
                 <h2>Contact Information</h2>
-                <p>If you have any questions or comments about the services please leave your feedback.</p>
+                <p>If you have any questions or message to me please leave your feedback.</p>
                 <p>kallebloomckwist@gmail.com</p>
                 <p>0664528216</p>
                 <p>Lviv, Vyhovskoho 23 str.</p>
@@ -43,7 +43,7 @@
                     </div>
                     <input id="email" type="email" required placeholder="E-mail" pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}" required/>
                     <br>
-                    <textarea id="msg" name="comments" rows="6" cols="30" placeholder="Write your message here" required></textarea>
+                    <textarea id="msg" name="message" rows="10" cols="50" placeholder="Write your message here" required></textarea>
                     <br>
                     <input id="submit_button" type="submit" value="Send"/> 
                 </form>
@@ -70,5 +70,7 @@
                 <a href="https://plus.google.com/u/1/110101179381222254453/posts"><img src="img/google.png" alt="google" height="40" width="40"/></a>
         </div>
         </footer>
+        <script src="jquery-2.2.3.min.js"></script>
+        <script src="java.js"></script>
 </body>
 </html>
