--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kushnir Petro</title>
-    <link rel="stylesheet" href="styles/orbit.css" />
+    <link rel="stylesheet" href="orbit.css" />
     <link rel="stylesheet" href="styles/about.css" />
     <link rel="stylesheet" href="styles/stylesheet.css" />
     	
@@ -55,13 +55,15 @@
                </div>
 
             <div id="featured"> 
-    			<img src="img/band.jpg" width="500" alt="band" />
-    			<img src="img/band2.jpg"  width="500" alt="Ezio" rel="my band" />
-    			<img src="img/mountains.jpg"  width="500" alt="mountains" />
-    			<img src="img/mountains1.jpg"  width="500" alt="mountains" rel="mountains" />
+    			<img src="img/band.jpg"  alt="band" />
+    			<img src="img/band2.jpg"   alt="band2" rel="myband" />
+    			<img src="img/mountains.jpg"   alt="mountains" />
+    			<img src="img/mountains1.jpg"   alt="mountains" rel="mountains" />
+    			<img src="img/ski1.jpg"   alt="ski" rel="ski" />
     		</div> 
-		<span class="orbit-caption" id="my band">This is an <em>awesome caption</em> for Ezio. <strong>Note:</strong> This whole image is linked</span>
-		<span class="orbit-caption" id="mountains">This is an <em>awesome caption</em> for Marcus with a <a href="http://www.zurb.com/playground" target="_blank" style="color: #fff">link</a></span>
+		<span class="orbit-caption" id="myband"><em target="_blank" style="color: #fff">Music band</em></span>
+		<span class="orbit-caption" id="mountains"><em target="_blank" style="color: #fff">Some adventures on Transcarpathian</em></span>
+		<span class="orbit-caption" id="ski"><em target="_blank" style="color: #fff">Nice ski season</em></span>
 		
                 <div class="paragraph">
                 <h2>My life</h2>
