--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="main_info">
             <h2>Couple words about me</h2>
                     <p id="short_story">Hi, my name is Petro Kushnir and I am beginner web developer. 
-                    My passion to become programmer aroused from the desired to create from numbers to programs, from ghosts to realities.
+                    My passion to become programmer aroused from the desired to create from symbols to programs, from ghosts to realities.
                     If you would like to know me better you are welcome, just press button "More about me".</p>
                 <div class="main_photo"><img src="img/mainphoto.png" alt="MainPhoto" width="300" height="400"></div>
             <a href="about.html" class="aboutbutton">More about me</a>
